recursion.cons.min.Min.scala.error
Compilation error:
Min:2: error: not found: value Null
val record: Int = Null
                  ^Min:6: error: reassignment to val
    record=l.head
          ^