recursion.cons.min.Min.scala.code
val record: Int = Null
def min(l:List[Int]): Int = {
	if (l==Nil) record
  if (l.head<record) {
    record=l.head
  }
  min(l.tail)
}